Refactor: refactor CarController@index to paginate with proper swagger docs
